adding css-imgs-header

--- a/ola.html
+++ b/ola.html
@@ -4,9 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link href="css/style.css" rel="stylesheet">
+    <title>Cadastro de Clientes</title>
 </head>
 <body>
-    <h1>Olá, Izadora!</h1>
+    <header>
+        <img class="logocad" src="imgs/cadastrologo.png" alt="Imagem de uma prancheta e uma lápis">
+        <h1>Cadastrando Clientes</h1>
+    </header>
 </body>
 </html>
